--- a/lang/ilias_hu.lang
+++ b/lang/ilias_hu.lang
@@ -2,7 +2,7 @@ cat_create_xlobj_results_behaviour#:#Eredmények megjelenítése
 cat_create_xlvo#:#Élőszavazás létrehozása
 common_actions#:#Műveletek
 common_all#:#Összes
-common_all2#:#HIÁNYZIK
+common_all2#:#HIÁNYZIK common_all2
 common_answer#:#Válasz
 common_back#:#Vissza
 common_cancel#:#Mégsem
@@ -21,9 +21,9 @@ common_round#:#Kör
 common_show_history#:#Történelem
 common_time#:#Időbélyeg
 common_user#:#Felhasználó
-common_option_no_longer_available#:#MISSING common_option_no_longer_available
+common_option_no_longer_available#:#[Ez a lehetőség többé nem érhető el]
 common_ok#:#OK
-config_allow_shortlink#:#MISSING config_allow_shortlink
+config_allow_shortlink#:#Rövid URL a szavazónak
 config_allow_shortlink_info#:#Rövid URL (pl. /vote) használatához adja a RewriteRule szabályt .htaccess fájljához:
 config_allow_shortlink_link#:#Rövid URL
 config_allow_shortlink_link_info#:#Telepítése teljes rövid URL-je , pl. https://ilias.domain.hu/vote
@@ -31,27 +31,31 @@ config_base_url#:#Alap URL
 config_base_url_info#:#Telepítése URL-je (alkönyvtárat is beleértve), pl. https://www.domain.hu/ilias
 config_cancel#:#Mégsem
 config_msg_success#:#Mentve
+config_request_frequency#:#Kliensfrissítési gyakoriság
+config_request_frequency_info#:#Az élőszavazás kliensoldali adatfrissítési gyakorisága másodpercben. Az alacsonyabb szám gyorsabb reagálást jelent, azaz a tutor módosítása hamarabb jelenik meg a kliensnél, de ez növeli a szerver terhelését. Célszerű 2 - 5 másodpercet beállítania.
 config_update#:#Módosítás
-config_result_api#:#MISSING config_result_api
-config_result_api_info#:#MISSING config_result_api_info
-config_api_token#:#MISSING config_api_token
-config_api_type#:#MISSING config_api_type
-config_regenerate_token#:#MISSING config_regenerate_token
-config_open_result_api#:#MISSING config_open_result_api
-config_use_global_cache#:#aktiválása caching
-config_use_global_cache_info#:#Lehetővé teszi a LiveVoting plugint használni a globális cache mechanizmus, amely biztosítja ILIAS. Az alapul szolgáló cache szinkronizálni kell egy multi veszi a telepítést, egyébként a plugin megjósolhatatlan eredményeket.
-config_presenter_link#:#MISSING config_presenter_link
-config_ppt_export#:#MISSING config_ppt_export
-config_ppt_export_info#:#MISSING config_ppt_export_info
+config_result_api#:#Eredmények-API bekapcsolása
+config_result_api_info#:A szavazás eredményei elérhetők JSON-ként a Customizing/global/plugins/Services/Repository/RepositoryObject/LiveVoting/api.php?xlvo_pin=XXXX?token=XXXXX linken keresztül.
+config_api_token#:#API-Token
+config_api_type#:#Típus
+config_regenerate_token#:#Token újragenerálása
+config_open_result_api#:#API-Link megnyitása (az utolsó szavazással)
+config_use_global_cache#:#Gyorsítótár bekapcsolása
+config_use_global_cache_info#:#A LiveVoting bővítmény használhatja az ILIAS biztosította globális gyorsítótárat.
+config_presenter_link#:#Előadó link
+config_presenter_link_non_anonym#:#Csak a 'Bejelentkezés nélküli szavazás' beállítással érhető el.
+config_ppt_export#:#PowerPoint exportálása
+config_ppt_export_info#:#PowerPoint exportálás bekapcsolása: Ehhez a funkcióhoz a PowerPoint-WebView-Plugin telepítése szükséges, továbbá az ILIAS HTTPS-sen kell, hogy fusson.
 correct_order#:#Helyes sorrend
 crs_create_xlvo#:#Élőszavazás létrehozása
 fikd_create_xlvo#:#Élőszavazás létrehozása
 grp_create_xlvo#:#Élőszavazás létrehozása
+rep_robj_xlvo_fold_create_xlvo#:#Élőszavazás létrehozása
 incorrect_order#:#Hibás sorrend
-msg_success_voting_created#:#Szavazást sikeresen létrehozta
-msg_success_voting_updated#:#Szavazást sikeresen módosította
+msg_success_voting_created#:#Az élőszavazást sikeresen létrehozta
+msg_success_voting_updated#:#Az élőszavazást sikeresen módosította
 new_round#:#Új kör
-obj_anonymous#:#Szavazás bejelentkezés nélkül
+obj_anonymous#:#Bejelentkezés nélküli szavazás
 obj_crs#:#Kurzus
 obj_description#:#Leírás
 obj_edit_properties#:#Tulajdonságok módosítása
@@ -68,8 +72,8 @@ obj_info_online#:#Objektum online és elérhető
 obj_info_reuse_status#:#Az élőszavazás pillanatnyi állapotának megőrzése amikor a következőre váltunk (szüneteltetett / nem szüneteltetett).
 obj_info_terminable#:#Az előszavazás csak a meghatározott időtartam alatt érhető el
 obj_msg_properties_form_saved#:#Beállításokat sikeresen mentette.
-obj_offline#:#MISSING obj_offline
-obj_online#:#MISSING obj_online
+obj_offline#:#Offline
+obj_online#:#Online
 obj_results_alway_off#:#Szavazatállás sohasem látható
 obj_results_alway_off_info#:#Kérdésváltás után a pillanatnyi szavazatállás nem jelenik meg.
 obj_results_alway_on#:#Szavazatállás mindig látható
@@ -97,8 +101,8 @@ player_msg_no_start_1#:#Ez az élőszavazás nem indítható, mert jelenleg offl
 player_msg_no_start_2#:#Ez az élőszavazás nem indítható, mert nincsenek elérhető szavazatok
 player_msg_no_votings#:#Ez az élőszavazás nem indítható, mert nincs benne kérdés
 player_msg_voting_not_available#:#A kijelölt élőszavazás nem érhető el
-player_player_countdown#:#Visszaszámlálás
-player_reset#:#MISSING player_reset
+player_player_countdown#:#VisszaszámlálásReset
+player_reset#:#Reszet
 player_seconds#:#mp
 player_show_results#:#Szavazatállás megjelenítése
 player_start_voting#:#Élőszavazás indítása
@@ -113,7 +117,7 @@ qtype_1_info_latex#:#LaTeX részt [tex] ... [/tex] közé kell írni.
 qtype_1_multi_selection#:#Többszörös kijelölés
 qtype_1_multi_selection_info#:#Válaszadó több, mint egy válaszlehetőséget jelölhet meg
 qtype_1_options#:#Lehetőségek
-qtype_1_option_text#:#MISSING qtype_1_option_text
+qtype_1_option_text#:#Lehetőségszöveg
 qtype_1_total_voters#:#Összes szavazó
 qtype_1_total_votes#:#Összes szavazó
 qtype_1_unvote#:#Szavazat visszavonása
@@ -141,7 +145,7 @@ qtype_4_option_text#:#Kifejezés
 qtype_4_save#:#Mentés
 qtype_4_wrong#:#Hibás
 qtype_4_your_order#:#Az Ön válasza:
-qtype_5_correct_solution#:#HIÁNYZIK
+qtype_5_correct_solution#:#Eredmények elrejtése
 qtype_5_display_correct_order#:#Sorrend
 qtype_5_hide_correct_order#:#Fordított sorrend
 qtype_5_options#:#Lehetőségek
@@ -149,30 +153,32 @@ qtype_5_option_text#:#Szöveg
 qtype_5_option_weight#:#Szélesség
 qtype_form_header#:#Válaszok
 qtype_multi_free_input#:#Többszörös válasz
-qtype_6_range_start#:#MISSING qtype_6_range_start
+qtype_6_range_start#:#Minimum
 qtype_6_voter_start_button_vote#:#Szavazás
 qtype_6_voter_clear#:#Kezdőállapotba
-qtype_6_voter_start_button_unvote#:#Megválni
-qtype_6_invalid_end_range#:#A végén a tartomány nagyobbnak kell lennie, mint a kezdés. Felhívjuk figyelmét, hogy a végén tartomány között kell lennie %1$s és %2$s.
-qtype_6_invalid_start_range#:#A start a tartományban kisebbnek kell lennie a végén. Felhívjuk figyelmét, hogy a start tartomány között kell lennie %1$s és %2$s.
-qtype_6_range_end#:#MISSING qtype_6_range_end
-qtype_6_option_percentage#:#MISSING qtype_6_option_percentage
-qtype_6_option_range_start#:#MISSING qtype_6_option_range_start
-qtype_6_option_range_end#:#MISSING qtype_6_option_range_end
-qtype_6_option_percentage_info#:#Kijelzők százalék jelek mellett a kezdő és záró szám.
-qtype_6_option_range_start_info#:#Kezdje a szám tartományban.
-qtype_6_option_range_end_info#:#Vége a fordulatszám-tartományban.
-qtype_4_option_randomise_option_after_save#:#MISSING qtype_4_option_randomise_option_after_save
+qtype_6_voter_start_button_unvote#:#Eldobás
+qtype_6_invalid_end_range#:#A tartomány végének nagyobbnak kell lennie, mint az eleje. A tartomány végének %1$s és %2$s között kell lennie.
+qtype_6_invalid_start_range#:#A tartományban elejének kisebbnek kell lennie, mint a vége. a tartomány elejének %1$s és %2$s között kell lennie.
+qtype_6_range_end#:#Maximum
+qtype_6_option_percentage#:#Százalékok
+qtype_6_option_range_start#:#Minimum
+qtype_6_option_range_end#:#Maximum
+qtype_6_option_percentage_info#:#A számtartomány megjelenítése százalékjellel. Nem történik számítás, ez csak egy vizuális lehetőség.
+qtype_6_option_range_start_info#:#A számtartomány eleje.
+qtype_6_option_range_end_info#:#A számtartomány vége.
+qtype_4_option_randomise_option_after_save#:#Válaszok keverése
 qtype_4_option_randomise_option_after_save_inf#:#MISSING qtype_4_option_randomise_option_after_save_inf
-qtype_6_option_alternative_result_display_mode#:#Képviselete a válaszokat
-qtype_6_option_alternative_result_display_mode_info#:#Alternatív képviselete a válaszokat. Ezeket mutatja lehajló csoportosítva szövegként.
-qtype_4_option_randomise_option_after_save_info#:#MISSING qtype_4_option_randomise_option_after_save_info
-qtype_6_display_mode_nr_0#:#MISSING qtype_6_display_mode_nr_0
-qtype_6_display_mode_nr_1#:#MISSING qtype_6_display_mode_nr_1
-qtype_6_display_mode_nr_2#:#MISSING qtype_6_display_mode_nr_2
+qtype_6_option_alternative_result_display_mode#:#Megjelenítési mód
+qtype_6_option_alternative_result_display_mode_info#:#Alternatív lehetőség, ami az eredményeket, a válaszokat csökkentő sorrendbe rendezett csoportokban jeleníti meg.
+qtype_4_option_randomise_option_after_save_info#:#A vetítés közben a lehetőségek véletlen sorrendben jelennek meg. 
+qtype_6_display_mode_nr_0#:#Hatékony becslések (növekvő sorrendben)
+qtype_6_display_mode_nr_1#:#Oszlopdiagram
+qtype_6_display_mode_nr_2#:#Hatékony becslések beleértve az átlagot, a mediánt és a móduszt.
 results_title#:#Eredmények
 rminable_select_start_time#:#Indítás
 root_create_xlvo#:#Élőszavazás létrehozása
+show_attendees#:#Szavazók száma (online)
+show_attendees_info#:#Nagy számú szavazásnál komoly teljesítményproblémákat okozhat a bekapcsolása.
 subtab_edit#:#Kezelés
 subtab_show#:#Megjelenítés
 tab_content#:#Tartalom
@@ -205,26 +211,26 @@ voting_add#:#Kérdés létrehozása
 voting_cancel#:#Mégsem
 voting_columns#:#A válaszlehetőségeket ennyi oszlopba rendezzük az előadó képernyőjén
 voting_confirm_number_of_votes#:#Felhasználói válaszok száma:
-voting_confirm_reset#:#Biztos, hogy reseteli ezt a szavazás? Az összes választ töröljük.
+voting_confirm_reset#:#Biztos, hogy reszeteli ezt a szavazás? Az összes választ töröljük.
 voting_confirm_reset_all#:#Biztos, hogy reseteli ezt a szavazás összes eredményét? Az összes választ töröljük.
 voting_create#:#Létrehozás
 voting_delete#:#Törlés
 voting_delete_confirm#:#Biztos, hogy törli a szavazatot?
 voting_description#:#Leírás
-voting_duplicate#:#Duplikálás"
-voting_duplicateToAnotherObject#:#MISSING voting_duplicateToAnotherObject
+voting_duplicate#:#Duplikálás
+voting_duplicateToAnotherObject#:#Másolás egy másik objektumba
 voting_edit#:#Módosítás
 voting_export#:#Exportálás
-voting_form_title_create#:#Kérdése
-voting_form_title_update#:#Kérdése
+voting_form_title_create#:#Kérdés
+voting_form_title_update#:#Kérdés
 voting_history#:#Szavazástörténelem
 voting_history_info#:#A válaszadók összes szavazatát mentjük, akkor is, ha később azt módosítják. Így a válaszadók szavazási viselkedését is elemezheti.
 voting_import#:#Importálás
 voting_msg_duplicated#:#Kérdést sikeresen duplikálta
 voting_msg_sorting_saved#:#Sorrend mentése
 voting_question#:#Kérdés
-voting_reset#:#MISSING voting_reset
-voting_reset_all#:#Összes szavazat resetelése
+voting_reset#:#Visszaállítás
+voting_reset_all#:#Összes szavazat alaphelyzetbe állítása
 voting_save_sorting#:#Sorrend mentése
 voting_select_type#:#Típus mentése
 voting_status#:#Állapot
@@ -245,56 +251,63 @@ voting_type_5_info#:#A kifejezések a kérdésben meghatározott szempont szerin
 voting_update#:#Mentés és vissza
 voting_update_and_stay#:#Mentés
 voting_type_6#:#Számtartomány
-voting_type_6_info#:#A felhasználók kitalálni egy számot X és Y között.
-voting_powerpoint_export#:#MISSING voting_powerpoint_export
+voting_type_6_info#:#A felhasználóknak egy X és Y között számot kell megadniuk.
+voting_powerpoint_export#:#Exportálás PowerPoint formátumban
 vqtype_1_options#:#Beállítások
-xlvo_add#:#Létrehozása
+xlvo_add#:#Élőszavazás létrehozása
 xlvo_delete#:#Élőszavazás törlése
-xlvo_edit#:#Módosítás
+xlvo_edit#:#Élőszavazás módosítása
 xlvo_edit_permission#:#Jogosultságok módosítása
-xlvo_new#:#Új Élőszavazás létrehozása
-xlvo_read#:#Olvasás (csak nem-anonim módban hasznresetálható)
-xlvo_visible#:#Élőszavazások látható
+xlvo_new#:#Új élőszavazás létrehozása
+xlvo_read#:#Élőszavazás olvasás (csak nem-anonim módban használható)
+xlvo_copy#:#Élőszavazás másolása
+xlvo_visible#:#Élőszavazás látható
 xlvo_write#:#Élőszavazás indítása és módosítása
-qtype_1_total_obj_results_alway_on_info#:#MISSING qtype_1_total_obj_results_alway_on_info
-config_request_frequency#:#MISSING config_request_frequency
-obj_frozen_alway_ofxlvo_edit#:#MISSING obj_frozen_alway_ofxlvo_edit
-playplayer_msg_no_start_2#:#MISSING playplayer_msg_no_start_2
-show_attendees#:#MISSING show_attendees
-show_attendees_info#:#MISSING show_attendees_info
+qtype_1_total_obj_results_alway_on_info#:#Az eredmények automatikusan megjelennek a kérdés megváltoztatása után.
+obj_frozen_alway_ofxlvo_edit#:#Módosítás
+playplayer_msg_no_start_2#:#Az élőszavazást nem lehet elindítani, mert még nincs szavazás.
 voting_short_link#:#Rövid URL
-voting_permanent_link#:#MISSING voting_permanent_link
-config_ppt_export_info_manual#:#MISSING config_ppt_export_info_manual
-config_ppt_export_info_manual_1#:#MISSING config_ppt_export_info_manual_1
-config_ppt_export_info_manual_2#:#MISSING config_ppt_export_info_manual_2
-config_ppt_export_info_manual_3#:#MISSING config_ppt_export_info_manual_3
-config_ppt_export_info_manual_4#:#MISSING config_ppt_export_info_manual_4
-config_allow_shortlink_presenter#:#MISSING config_allow_shortlink_presenter
-config_allow_shortlink_presenter_info#:#MISSING config_allow_shortlink_presenter_info
-config_allow_shortlink_link_presenter#:#MISSING config_allow_shortlink_link_presenter
-config_allow_shortlink_link_presenter_info#:#MISSING config_allow_shortlink_link_presenter_info
-rbac_create_xlvo#:#MISSING rbac_create_xlvo
-player_pin#:#MISSING player_pin
-qtype_6_option_range_step#:#MISSING qtype_6_option_range_step
-qtype_6_option_range_step_info#:#MISSING qtype_6_option_range_step_info
-config_use_serif_font_for_pins#:#MISSING config_use_serif_font_for_pins
-config_use_serif_font_for_pins_info#:#MISSING config_use_serif_font_for_pins_info
-qtype_6_invalid_step_range#:#MISSING qtype_6_invalid_step_range
-qtype_2_answer_field#:#MISSING qtype_2_answer_field
-qtype_2_answer_field_info#:#MISSING qtype_2_answer_field_info
-qtype_2_answer_field_single_line#:#MISSING qtype_2_answer_field_single_line
-qtype_2_answer_field_single_line_info#:#MISSING qtype_2_answer_field_single_line_info
-qtype_2_answer_field_multi_line#:#MISSING qtype_2_answer_field_multi_line
-qtype_2_answer_field_multi_line_info#:#MISSING qtype_2_answer_field_multi_line_info
-start_online#:#MISSING start_online
-start_zoom#:#MISSING start_zoom
-qtype_1_optmsg_success_voting_updated#:#MISSING qtype_1_optmsg_success_voting_updated
-qtype_6_mean#:#MISSING qtype_6_mean
-qtype_6_median#:#MISSING qtype_6_median
-qtype_6_mode#:#MISSING qtype_6_mode
-qtype_6_mode_not_applicable#:#MISSING qtype_6_mode_not_applicable
-btn_categorize#:#MISSING
-btn_categorize_done#:#MISSING
-btn_add_category#:#MISSING
-btn_add_answer#:#MISSING
-category_title#:#MISSING
+voting_permanent_link#:#Állandó link
+config_ppt_export_info_manual#:#PowerPoint-ba ágyazott élőszavazások:
+config_ppt_export_info_manual_1#:#Élőszavazás exportálása
+config_ppt_export_info_manual_2#:#PowerPoint indítása
+config_ppt_export_info_manual_3#:#A 'Web Viewer' keresése az Office AddIn's Store-ban (Insert > AddIns > My AddIns)
+config_ppt_export_info_manual_4#:#Web-Viewer AddIn hozzáadása
+config_ppt_link_info_manual#:#Élőszavazások beágyazása és használata a PowerPointban:
+config_ppt_link_info_manual_1#:#Egyéni: Powerpoint-ban: 'Web Viewer' keresése az Office-Add-Ins Store-ban  (Insert > Add-Ins > My AddIns) és a Web-Viewer Add-In hozzáadása.
+config_ppt_link_info_manual_2#:#A kérdés moderálási linkjének másolása
+config_ppt_link_info_manual_3#:#Hozzon létre egy üres diát a prezentációban, és adjon hozzá egy webviewer elemet
+config_ppt_link_info_manual_4#:#Moderálási link beszúrása
+config_ppt_link_info_manual_5#:#Előadás elindítása
+config_ppt_link_info_manual_6#:#Veszély. Ha egy élőszavazást használ PowerPointban, szüneteltetnie kell a szavazást, mielőtt az Élőszavazás segítségével minden egyes diaváltást végezne. Ellenkező esetben az élő szavazás nem frissül a résztvevői nézetben.
+config_ppt_export_info_manual_5#:#Előadás elindítása
+config_ppt_export_info_manual_6#:#Veszély. Ha egy élőszavazást használ PowerPointban, szüneteltetnie kell a szavazást, mielőtt a Élőszavazás segítségével minden egyes diaváltást végezne. Ellenkező esetben az élő szavazás nem frissül a résztvevői nézetben.
+onfig_allow_shortlink_presenter#:#Előadáshoz rövid URL bekapcsolása
+config_allow_shortlink_presenter_info#:#A .htaccess fájlhoz RewriteRule hozzáadásával hozható létre rövid URL, ami például a https://ilias.domain.hu/presenter oldalra mutat:
+config_allow_shortlink_link_presenter#:#Rövid URL
+config_allow_shortlink_link_presenter_info#:#A telepítés teljes rövid URL-je, például https://ilias.domain.hu/presenter
+rbac_create_xlvo#:#Élőszavazások létrehozása
+player_pin#:#PIN: %s
+qtype_6_option_range_step#:#Lépésköz
+qtype_6_option_range_step_info#:#A számtartomány lépésköze.
+config_use_serif_font_for_pins#:#Serif betűtípus használata PIN-hez
+config_use_serif_font_for_pins_info#:#Serif betűtípus használata PIN-hez
+qtype_6_invalid_step_range#:#A lépésköz mentése sikertelen. A minimum és maximum különbségénél kisebbnek kell lennie.
+qtype_2_answer_field#:#Válaszmező
+qtype_2_answer_field_info#:#Válaszmező
+qtype_2_answer_field_single_line#:#Egysoros válaszmező
+qtype_2_answer_field_single_line_info#:#Egysoros válaszmező
+qtype_2_answer_field_multi_line#:#Többsoros válaszmező
+qtype_2_answer_field_multi_line_info#:#Többsoros válaszmező
+start_online#:#%s online
+start_zoom#:#Nagyítás
+qtype_1_optmsg_success_voting_updated#:#A kérdést sikeresen mentette
+qtype_6_mean#:#Átlag
+qtype_6_median#:#Medián
+qtype_6_mode#:#Módusz
+qtype_6_mode_not_applicable#:#nem alkalmazható
+btn_categorize#:#Kategorizálás
+btn_categorize_done#:#Kategorizálás befejezése
+btn_add_category#:#Kategória hozzáadása
+btn_add_answer#:#Bemenet hozzáadása
+category_title#:#Kategória címe
